--- a/latent_frontend/pubspec.yaml
+++ b/latent_frontend/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   image_picker: ^1.1.2
   provider: ^6.1.2
   font_awesome_flutter: ^10.7.0
-  shared_preferences: ^2.2.2
-  geolocator: ^14.0.2
-  permission_handler: ^12.0.1
-  video_player: ^2.8.2
-  path_provider: ^2.1.2
-  share_plus: ^12.0.1
-  url_launcher: ^6.3.0
+  shared_preferences: ^2.3.5
+  geolocator: ^13.0.2
+  permission_handler: ^11.3.1
+  video_player: ^2.9.1
+  path_provider: ^2.1.5
+  share_plus: ^10.1.4
+  url_launcher: ^6.3.1
+  package_info_plus: ^8.0.0
 
 dependency_overrides:
   win32: ^5.11.0
