Fix deployment blockers: missing timezone import, invalid notification type, and schema migration

--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,13 @@ CORS_ALLOWED_ORIGINS=https://yourapp.com,https://www.yourapp.com
 # ====================
 # For production, use PostgreSQL:
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=socialnetwork
-DB_USER=youruser
-DB_PASSWORD=yourpassword
-DB_HOST=localhost
-DB_PORT=5432
+# DB_NAME=socialnetwork
+# DB_USER=youruser
+# DB_PASSWORD=yourpassword
+# DB_HOST=localhost
+# DB_PORT=5432
+# Alternatively, use a connection URL:
+# DJANGO_DATABASE_URL=postgres://user:pass@host:port/dbname
 
 # ====================
 # Firebase/FCM (Push Notifications)
@@ -30,6 +32,8 @@ DB_PORT=5432
 # ====================
 # Media Storage (S3/Cloud optional)
 # ====================
+USE_AWS_S3=False
 # AWS_ACCESS_KEY_ID=your-access-key
 # AWS_SECRET_ACCESS_KEY=your-secret-key
 # AWS_STORAGE_BUCKET_NAME=your-bucket-name
+# AWS_S3_REGION_NAME=us-east-1
