--- a/latent_frontend/pubspec.yaml
+++ b/latent_frontend/pubspec.yaml
@@ -47,6 +47,14 @@ dependencies:
   share_plus: ^10.1.4
   url_launcher: ^6.3.1
   package_info_plus: ^8.0.0
+  cached_network_image: ^3.3.1
+  visibility_detector: ^0.4.0+2
+  video_compress: ^3.1.4
+  flutter_image_compress: ^2.4.0
+  shimmer: ^3.0.0
+  sqflite: ^2.4.1
+  sqflite_common_ffi: ^2.3.5
+  sqlite3_flutter_libs: ^0.5.24
 
 dependency_overrides:
   win32: ^5.11.0
@@ -62,7 +70,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^6.0.0
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -103,3 +112,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21
