--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.0'
+          flutter-version: 'any'
           channel: 'stable'
           cache: true
 
